--- a/app/assets/stylesheets/calendar/calendar.css
+++ b/app/assets/stylesheets/calendar/calendar.css
@@ -126,19 +126,10 @@ label {
     margin: 5px;
 }
 
-.rooms_container {
+.select_rooms_cotainer {
     position: relative;
-    background: #dbd8e3;
-    margin: 3px;
-    border-radius: 5px;
-    width: 400px;
-    flex-direction: row;
-    display: flex;
-    height: auto;
-    margin-left: 5px;
-    justify-content: center;
-    align-items: center;
-    margin-top: 15px;
+    margin-bottom: 10px;
+    margin-top: 10px;
 }
 
 .rooms {
